[project]
name = "repogather"
version = "0.0.4"
description = "Easily copy all relevant source files in a repository to clipboard"
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "tiktoken>=0.7.0",
    "pyperclip>=1.9.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
repogather = "repogather:main"
